--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,124 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@ARTICLE{Sarridis2024TPAMI,
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title={{FLAC}: Fairness-Aware Representation Learning by Suppressing Attribute-Class Associations},
+  year={2024},
+  volume={},
+  number={},
+  pages={1-13},
+  keywords={Prevention and mitigation;Artificial intelligence;Training;Data models;Mutual information;Accuracy;Visualization;Representation learning;Predictive models;Minimization;Bias mitigation;fairness;mutual information},
+  doi={10.1109/TPAMI.2024.3487254},
+  bibtex_show = {true},
+  abbr = {J},
+  selected={true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{MelziIF2024,
+title = {FRCSyn-onGoing: Benchmarking and comprehensive evaluation of real and synthetic data to improve face recognition systems},
+journal = {Information Fusion},
+volume = {107},
+pages = {102322},
+year = {2024},
+issn = {1566-2535},
+doi = {https://doi.org/10.1016/j.inffus.2024.102322},
+url = {https://www.sciencedirect.com/science/article/pii/S1566253524001003},
+author = {Pietro Melzi and Ruben Tolosana and Ruben Vera-Rodriguez and Minchul Kim and Christian Rathgeb and Xiaoming Liu and Ivan DeAndres-Tame and Aythami Morales and Julian Fierrez and Javier Ortega-Garcia and Weisong Zhao and Xiangyu Zhu and Zheyu Yan and Xiao-Yu Zhang and Jinlin Wu and Zhen Lei and Suvidha Tripathi and Mahak Kothari and Md Haider Zama and Debayan Deb and Bernardo Biesseck and Pedro Vidal and Roger Granada and Guilherme Fickel and Gustavo Führ and David Menotti and Alexander Unnervik and Anjith George and Christophe Ecabert and Hatef Otroshi Shahreza and Parsa Rahimi and Sébastien Marcel and Ioannis Sarridis and Christos Koutlis and Georgia Baltsou and Symeon Papadopoulos and Christos Diou and Nicolò Di Domenico and Guido Borghi and Lorenzo Pellegrini and Enrique Mas-Candela and Ángela Sánchez-Pérez and Andrea Atzori and Fadi Boutros and Naser Damer and Gianni Fenu and Mirko Marras},
+bibtex_show = {true},
+abbr = {J}}
+
+@InProceedings{Melzi_2024_WACV,
+    author    = {Melzi, Pietro and Tolosana, Ruben and Vera-Rodriguez, Ruben and Kim, Minchul and Rathgeb, Christian and Liu, Xiaoming and DeAndres-Tame, Ivan and Morales, Aythami and Fierrez, Julian and Ortega-Garcia, Javier and Zhao, Weisong and Zhu, Xiangyu and Yan, Zheyu and Zhang, Xiao-Yu and Wu, Jinlin and Lei, Zhen and Tripathi, Suvidha and Kothari, Mahak and Zama, Md Haider and Deb, Debayan and Biesseck, Bernardo and Vidal, Pedro and Granada, Roger and Fickel, Guilherme and F\"uhr, Gustavo and Menotti, David and Unnervik, Alexander and George, Anjith and Ecabert, Christophe and Shahreza, Hatef Otroshi and Rahimi, Parsa and Marcel, S\'ebastien and Sarridis, Ioannis and Koutlis, Christos and Baltsou, Georgia and Papadopoulos, Symeon and Diou, Christos and Di Domenico, Nicol\`o and Borghi, Guido and Pellegrini, Lorenzo and Mas-Candela, Enrique and S\'anchez-P\'erez, \'Angela and Atzori, Andrea and Boutros, Fadi and Damer, Naser and Fenu, Gianni and Marras, Mirko},
+    title     = {FRCSyn Challenge at WACV 2024: Face Recognition Challenge in the Era of Synthetic Data},
+    booktitle = {Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) Workshops},
+    month     = {January},
+    year      = {2024},
+    pages     = {892-901}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{sarridis2024facex,
+  title={FaceX: Understanding Face Attribute Classifiers through Summary Model Explanations},
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  booktitle={Proceedings of the 2024 International Conference on Multimedia Retrieval},
+  pages={758--766},
+  year={2024},
+  abbr = {C}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{sarridis2023towards,
+  title={Towards Fair Face Verification: An In-depth Analysis of Demographic Biases},
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  booktitle={ECML-PKDD 2023 Workshop on Bias and Fairness in AI (BIAS 2023)},
+  year={2023},
+  abbr = {C}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{sarridis2024mitigating,
+  title={Mitigating Viewer Impact From Disturbing Imagery Using AI Filters: A User-Study},
+  author={Sarridis, Ioannis and Spangenberg, Jochen and Papadopoulou, Olga and Papadopoulos, Symeon},
+  journal={International Journal of Human--Computer Interaction},
+  pages={1--12},
+  year={2024},
+  publisher={Taylor \& Francis},
+  doi = {10.1080/10447318.2024.2313890}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{karantaidis2019block,
+  title={Block Randomized Optimization for Adaptive Hypergraph Learning},
+  author={Karantaidis, George and Sarridis, Ioannis and Kotropoulos, Constantine},
+  booktitle={2019 IEEE International Conference on Image Processing (ICIP)},
+  pages={864--868},
+  year={2019},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{sarridis2021neural,
+  title={Neural factorization applied to interaction matrix for recommendation},
+  author={Sarridis, Ioannis and Kotropoulos, Constantine},
+  booktitle={2021 29th European Signal Processing Conference (EUSIPCO)},
+  pages={1336--1340},
+  year={2021},
+  organization={IEEE}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{ntemi2022autoregressive,
+  title={An autoregressive graph convolutional long short-term memory hybrid neural network for accurate prediction of COVID-19 cases},
+  author={Ntemi, Myrsini and Sarridis, Ioannis and Kotropoulos, Constantine},
+  journal={IEEE Transactions on Computational Social Systems},
+  volume={10},
+  number={2},
+  pages={724--735},
+  year={2022},
+  publisher={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+
+@article{karantaidis2021adaptive,
+  title={Adaptive hypergraph learning with multi-stage optimizations for image and tag recommendation},
+  author={Karantaidis, Georgios and Sarridis, Ioannis and Kotropoulos, Constantine},
+  journal={Signal Processing: Image Communication},
+  volume={97},
+  pages={116367},
+  year={2021},
+  publisher={Elsevier}
 }
+
+@inproceedings{sarridis2022leveraging,
+  title={Leveraging large-scale multimedia datasets to refine content moderation models},
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulou, Olga and Papadopoulos, Symeon},
+  booktitle={2022 IEEE Eighth International Conference on Multimedia Big Data (BigMM)},
+  pages={125--132},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{sarridis2022indistill,
+  title={InDistill: Information flow-preserving knowledge distillation for model compression},
+  author={Sarridis, Ioannis and Koutlis, Christos and Kordopatis-Zilos, Giorgos and Kompatsiaris, Ioannis and Papadopoulos, Symeon},
+  journal={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) Workshops},
+  year={2025}
+}
+
+
