--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,8 @@ abbr = {J}}
     booktitle = {Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) Workshops},
     month     = {January},
     year      = {2024},
-    pages     = {892-901}
+    pages     = {892-901},
+    abbr = {C}
 }
 
 @inproceedings{sarridis2024facex,
@@ -62,7 +63,8 @@ abbr = {J}}
   pages={1--12},
   year={2024},
   publisher={Taylor \& Francis},
-  doi = {10.1080/10447318.2024.2313890}
+  doi = {10.1080/10447318.2024.2313890},
+  abbr = {J}
 }
 
 @inproceedings{karantaidis2019block,
@@ -71,7 +73,8 @@ abbr = {J}}
   booktitle={2019 IEEE International Conference on Image Processing (ICIP)},
   pages={864--868},
   year={2019},
-  organization={IEEE}
+  organization={IEEE},
+  abbr = {C}
 }
 
 @inproceedings{sarridis2021neural,
@@ -80,7 +83,8 @@ abbr = {J}}
   booktitle={2021 29th European Signal Processing Conference (EUSIPCO)},
   pages={1336--1340},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  abbr = {C}
 }
 
 @article{ntemi2022autoregressive,
@@ -91,7 +95,8 @@ abbr = {J}}
   number={2},
   pages={724--735},
   year={2022},
-  publisher={IEEE}
+  publisher={IEEE},
+  abbr = {J}
 }
 
 
@@ -102,7 +107,8 @@ abbr = {J}}
   volume={97},
   pages={116367},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  abbr = {J}
 }
 
 @inproceedings{sarridis2022leveraging,
@@ -111,14 +117,16 @@ abbr = {J}}
   booktitle={2022 IEEE Eighth International Conference on Multimedia Big Data (BigMM)},
   pages={125--132},
   year={2022},
-  organization={IEEE}
+  organization={IEEE},
+  abbr = {C}
 }
 
 @article{sarridis2022indistill,
   title={InDistill: Information flow-preserving knowledge distillation for model compression},
   author={Sarridis, Ioannis and Koutlis, Christos and Kordopatis-Zilos, Giorgos and Kompatsiaris, Ioannis and Papadopoulos, Symeon},
   journal={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) Workshops},
-  year={2025}
+  year={2025},
+  abbr = {C}
 }
 
 
