--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,52 @@
 ---
 ---
 
+
+
+
+@inproceedings{sarridis2024mavias,
+  title = {MAVias: Mitigate Any Visual Bias},
+  author = {Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  year = {2025},
+  abbr = {C},
+}
+
+@inproceedings{sarridis2024badd,
+  title={BAdd: Bias Mitigation through Bias Addition},
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+  year = {2025},
+  abbr = {C}
+}
+
+@inproceedings{sarridis2024vbmitigator,
+  title={VB-Mitigator: An Open-source Framework for Evaluating and Advancing Visual Bias Mitigation},
+  author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
+  booktitle = {Proceedings of the 28th European Conference on Artificial Intelligence (ECAI) Workshops},
+  year = {2025},
+  abbr = {C}
+}
+
+@inproceedings{baltsou2024sdfd,
+  title={Sdfd: Building a versatile synthetic face image dataset with diverse attributes},
+  author={Baltsou, Georgia and Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon},
+  booktitle={2024 IEEE 18th International Conference on Automatic Face and Gesture Recognition (FG)},
+  pages={1--10},
+  year={2024},
+  organization={IEEE},
+  abbr = {C}
+}
+
+@inproceedings{moussa2025face,
+  title={Face-swapping Based Data Augmentation for ID Document and Selfie Face Verification},
+  author={Moussa, Elmokhtar Mohamed and Sarridis, Ioannis and Krasanakis, Emmanouil and Ramoly, Nathan and Papadopoulos, Symeon and Awal, Ahmad-Montaser and Younes, Lara},
+  booktitle={Proceedings of the Winter Conference on Applications of Computer Vision},
+  pages={1421--1428},
+  year={2025},
+  abbr = {C}
+}
+
 @ARTICLE{Sarridis2024TPAMI,
   author={Sarridis, Ioannis and Koutlis, Christos and Papadopoulos, Symeon and Diou, Christos},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
