--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   year = {2025},
   abbr = {C},
+  selected={true}
 }
 
 @inproceedings{sarridis2024badd,
